feat: update backend & frontend - new controllers, notifications, analytics, offer mgmt, interview mgmt, profile, auth improvements; exclude media via .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,23 @@ logs/
 # Temporary files
 *.tmp
 *.temp
+
+# Media files (images, video, audio)
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.webp
+*.bmp
+*.tiff
+*.mp4
+*.avi
+*.mov
+*.mkv
+*.webm
+*.mp3
+*.wav
+*.ogg
+
+# Temp git status file
+git_status_temp.txt
